tests/errors/recursive-repeat-macro.spcasmtest
org 0

macro recursive(repetition)
  repeat 3
    %recursive(<repetition>)
    nop
  endrepeat
endmacro

recursion_start:
  %recursive(600)
